--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-discord-py==2.3.2
-google-generativeai==0.3.0
+discord.py==2.3.2
+mistralai==0.0.15
 python-dotenv==1.0.0
 aiohttp==3.9.1
+requests==2.31.0
